<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_part1</name>
  <version>0.0.0</version>
  <description>Parte 1 do projeto - Cliente do serviço /get_map</description>

  <maintainer email="murilo.oliveira@sou.inteli.edu.br">Murilo</maintainer>
  <license>Apache-2.0</license>

  <!-- Ferramenta de build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependências do código -->
  <depend>rclcpp</depend>
  <depend>cg_interfaces</depend>

  <!-- Dependências de teste (opcional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
