<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_part2</name>
  <version>0.0.0</version>
  <description>Parte 2 do Culling Games: Mapeamento DFS modularizado.</description>

  <maintainer email="murilo.oliveira@sou.inteli.edu.br">Murilo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cg_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
